--- a/layouts/partials/head_includes.html
+++ b/layouts/partials/head_includes.html
@@ -1,4 +1,4 @@
-{{ $style := resources.Get "scss/main.scss" | toCSS | postCSS | minify | fingerprint }} 
+{{ $style := resources.Get "css/main.css" | toCSS | minify | fingerprint }} 
 <link type="text/css" rel="stylesheet" href="{{ $style.Permalink }}" crossorigin="anonymous" integrity="{{ $style.Data.Integrity }}">
 
 {{ $fira := resources.Get "vendor/bower_components/fira/fira.css" | postCSS | minify | fingerprint }} 
